# stock-price-prediction-system

./: ACB_2611_1612.csv  CTG_2611_1612.csv  MBB_2611_1612.csv  README.md  VCB_2611_1612.csv  VN30INDEX_2611_1612.csv  crawler.py  docker-compose.yaml  main.py  option.py  pyproject.toml
auto_crawler/: crawler.py  exacuter.py
dags/: dag_crawler.py  dag_retrain.py
dags/module/: crawler.py  retrain.py  test_db.py
experiment/: acnn.py  arima.py  clean.py  config.py  fe.py  linear_regression.py  lstm.py  main.py  predict.py  requirement.txt  retrain_lstm.py  utils.py
experiment/data/: VN30_full.csv
experiment/training_lstm/: checkpoint  cp.ckpt.data-00000-of-00001  cp.ckpt.index  cp_0.ckpt.data-00000-of-00001  cp_0.ckpt.index  cp_1.ckpt.data-00000-of-00001  cp_1.ckpt.index  cp_2.ckpt.data-00000-of-00001  cp_2.ckpt.index  cp_3.ckpt.data-00000-of-00001  cp_3.ckpt.index  cp_4.ckpt.data-00000-of-00001  cp_4.ckpt.index  cp_5.ckpt.data-00000-of-00001  cp_5.ckpt.index  cp_6.ckpt.data-00000-of-00001  cp_6.ckpt.index  cp_7.ckpt.data-00000-of-00001  cp_7.ckpt.index  cp_8.ckpt.data-00000-of-00001  cp_8.ckpt.index  cp_9.ckpt.data-00000-of-00001  cp_9.ckpt.index
flask-server/: README.md  app.py  docker-compose.yml  requirements.txt
flask-server/crawler/: crawler.py
flask-server/models/: arima.py  config.py  predict.py  utils.py
flask-server/templates/: index.html
stock-prediction-airflow-v2/: requirements.txt
stock-prediction-airflow-v2/.astro/: config.yaml
stock-prediction-web/: package.json
utils/: convert_data.py  option.py
(+8 files in other folders)
