[tool.poetry]
name = "crawler"
version = "0.0.1"
description = "for data science"
authors = ["dinhchicongf9@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
loguru = "^0.6.0"
apache-airflow = {version = "2.5.1", extras = ["celery"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
